updated background color

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./popup.css" />
   </head>
-  <body>
+  <body style="background-color:#eed9c4;" >
     <template id="li_template">
       <li>
         <a>
@@ -16,7 +16,7 @@
       </li>
     </template>
 
-    <h1>Google Dev Docs</h1>
+    <h1> Google Dev Docs</h1>
     <button>Group Tabs</button>
     <ul></ul>
 
