--- a/popup.html
+++ b/popup.html
@@ -114,7 +114,7 @@
 <div class="container">
   <!-- Header Section -->
   <div class="header">
-    <img src="https://via.placeholder.com/50" class="bear-icon" alt="Bear Icon">
+    <img src="https://bear-necessities-hackathon.my.canva.site/" class="bear-icon" alt="Bear Icon">
     <div class="menu-icon"></div>
   </div>
 
@@ -147,6 +147,8 @@
     <div class="challenge-item"><div class="checkbox"></div>Group tabs</div>
     <div class="challenge-item"><div class="checkbox"></div>Sort 3 tabs into education</div>
   </div>
+
+  <button id="open-website">Open BearNecessities Website</button>
 </div>
 
 <!-- Optional JavaScript for Checkbox Toggle -->
