--- a/popup.html
+++ b/popup.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=300, initial-scale=1.0">
   <title>Simple Tab Manager UI</title>
-  <!-- <link rel="stylesheet" href="popup.css"> -->
-  <!-- <script src="popup.js" defer></script> -->
+  <link rel="stylesheet" href="popup.css">
+  <script src="popup.js" defer></script>
 </head>
 <body>
 <div class="container">
@@ -65,295 +65,3 @@
 </div>
 </body>
 </html>
-
-<script>
-
-  const API_KEY = "2JYy39h8h79EgyLnvPL6bZjdAzTME";
-  const API_URL = "https://website-categorization.whoisxmlapi.com/api/v2";
-
-  async function getWebsiteCategory(url) {
-    try {
-      const domain = new URL(url).hostname;
-      const response = await fetch(
-              `${API_URL}?apiKey=${API_KEY}&domain=${encodeURIComponent(domain)}`,
-              { method: "GET" }
-      );
-
-      if (!response.ok) {
-        return "Uncategorized";
-      }
-
-      const data = await response.json();
-      if (!data.categories || data.categories.length === 0) {
-        return "Uncategorized";
-      }
-
-      return data.categories[0];
-    } catch (error) {
-      return "Uncategorized";
-    }
-  }
-
-  document.getElementById('fetch-tabs').addEventListener('click', () => {
-    chrome.runtime.sendMessage({ action: "fetchTabs" }, (tabs) => {
-      if (chrome.runtime.lastError) {
-        console.error(chrome.runtime.lastError.message);
-        return;
-      }
-
-      const tabsWithTimes = tabs.map(tab => ({
-        title: tab.title,
-        url: tab.url,
-        openTime: Date.now() - tab.lastAccessed
-      }));
-
-      tabsWithTimes.sort((a, b) => b.openTime - a.openTime);
-      const topTabs = tabsWithTimes.slice(0, 3);
-
-      const display = document.getElementById('tabs-display');
-      display.innerHTML = topTabs.map(tab => `
-            <div>
-                <p><strong>Title:</strong> ${tab.title}</p>
-                <p><strong>URL:</strong> ${tab.url}</p>
-                <p><strong>Open for:</strong> ${Math.floor(tab.openTime / 1000)} seconds</p>
-            </div>
-        `).join('');
-    });
-  });
-
-
-  async function categorizeTabs() {
-    const tabs = await chrome.tabs.query({});
-    const categorizedTabs = await Promise.all(
-            tabs.map(async (tab) => {
-              if (!tab.url) {
-                return { ...tab, category: "Uncategorized" };
-              }
-
-              const category = await getWebsiteCategory(tab.url);
-              return { ...tab, category };
-            })
-    );
-
-    const collator = new Intl.Collator();
-    categorizedTabs.sort((a, b) => collator.compare(a.title, b.title));
-
-    const groupedTabs = {};
-    categorizedTabs.forEach((tab) => {
-      if (!groupedTabs[tab.category]) {
-        groupedTabs[tab.category] = [];
-      }
-      groupedTabs[tab.category].push(tab);
-    });
-
-    updatePopupUI(groupedTabs);
-  }
-
-  function updatePopupUI(groupedTabs) {
-    const ul = document.querySelector("ul");
-    ul.innerHTML = "";
-
-    Object.entries(groupedTabs).forEach(([category, tabs]) => {
-      const categoryHeader = document.createElement("h3");
-      categoryHeader.textContent = category;
-      ul.appendChild(categoryHeader);
-
-      const template = document.getElementById("li_template");
-
-      for (const tab of tabs) {
-        const element = template.content.firstElementChild.cloneNode(true);
-        element.querySelector(".title").textContent = tab.title;
-        element.querySelector(".pathname").textContent = new URL(tab.url).pathname;
-        element.querySelector("a").addEventListener("click", async () => {
-          await chrome.tabs.update(tab.id, { active: true });
-          await chrome.windows.update(tab.windowId, { focused: true });
-        });
-
-        ul.appendChild(element);
-      }
-    });
-  }
-
-  async function groupTabsByCategory() {
-    const tabs = await chrome.tabs.query({});
-    const groupedTabs = {};
-
-    for (const tab of tabs) {
-      if (!tab.url) continue;
-
-      const category = await getWebsiteCategory(tab.url);
-
-      if (!groupedTabs[category]) {
-        groupedTabs[category] = [];
-      }
-      groupedTabs[category].push(tab.id);
-    }
-
-    for (const [category, tabIds] of Object.entries(groupedTabs)) {
-      if (tabIds.length) {
-        try {
-          const group = await chrome.tabs.group({ tabIds });
-          await chrome.tabGroups.update(group, { title: category });
-        } catch (err) {
-          console.error(`Error grouping "${category}":`, err);
-        }
-      }
-    }
-  }
-
-  document.addEventListener("DOMContentLoaded", categorizeTabs);
-
-  const button = document.querySelector("button");
-  button.addEventListener("click", groupTabsByCategory);
-
-  document.addEventListener('DOMContentLoaded', () => {
-    const checkboxes = document.querySelectorAll('.checkbox');
-
-    checkboxes.forEach(checkbox => {
-      checkbox.addEventListener('click', () => {
-        checkbox.classList.toggle('checked');
-      });
-    });
-  });
-
-  function checkAll() {
-    document.querySelectorAll('.checkbox-item input[type="checkbox"]').forEach(cb => cb.checked = true);
-  }
-  function uncheckAll() {
-    document.querySelectorAll('.checkbox-item input[type="checkbox"]').forEach(cb => cb.checked = false);
-  }
-</script>
-
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f3d9c3;
-    margin: 0;
-    padding: 20px;
-    width: 325px;
-    height: 425px;
-    overflow: hidden; /* Prevents overflow and keeps the size fixed */
-    box-sizing: border-box;
-  }
-
-  .container {
-    width: 100%;
-    height: 100%;
-    overflow-y: auto; /* Adds scroll if content overflows */
-    box-sizing: border-box;
-  }
-
-  .checkbox-list {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  .checkbox-item {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-  }
-  input[type="checkbox"] {
-    appearance: none;
-    width: 20px;
-    height: 20px;
-    border: 2px solid #d3926e;
-    border-radius: 4px;
-    margin-right: 10px;
-    transition: all 0.2s;
-    cursor: pointer;
-  }
-  input[type="checkbox"]:checked {
-    background-color: #d3926e;
-    border-color: #d3926e;
-  }
-  input[type="checkbox"]:checked::after {
-    content: "✔";
-    color: white;
-    font-size: 14px;
-    display: block;
-    text-align: center;
-    line-height: 20px;
-  }
-  label {
-    color: #333;
-    font-size: 16px;
-  }
-  .menu-icon img {
-    width: 30px; /* Explicit width */
-    height: auto; /* Maintain aspect ratio */
-    max-width: 100%; /* Prevent overflow */
-  }
-
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 10px;
-  }
-
-  .bear-icon {
-    width: 40px; /* Make the bear fit within the menu-icon */
-    height: auto; /* Maintain aspect ratio */
-    padding: 0;
-  }
-
-  .stat-box {
-    background-color: #f3d9c3;
-    border-radius: 12px; /* Makes the box rounded */
-    padding: 10px 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-width: 80px; /* Ensures a consistent size */
-    margin: 8px; /* Adds space between the boxes */
-    border: 2px solid #d3926e; /* Set border width, style, and color */
-    margin-left: 4px;
-
-
-
-  }
-
-
-  .stats {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-  }
-
-  .stat-box p {
-    margin: 0;
-    font-size: 14px;
-    color: #333;
-  }
-
-  .stat-box h1 {
-    margin: 5px 0 0;
-    font-size: 24px;
-    color: #d3926e;
-  }
-
-  #fetch-tabs {
-    display: block;
-    margin: 20px auto;
-    padding: 10px 20px;
-    background-color: #d3926e;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-  }
-
-  #tabs-display {
-    margin-top: 20px;
-    background: white;
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-
-</style>
