--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,7 @@
 <div class="container">
   <div class="header">
     <img src="images/bear_hi_wave_1.png" class="bear-icon" alt="Bear Icon">
+    <h1 style="margin: 0 10px; font-size: 20px; color: #333;">Bear Necessities</h1>
     <div class="menu-icon">
         <a target="_blank" href="http://localhost:5173/">
             <img src="images/open-in-new.png" alt="Menu Icon" style="width: 20px; height: 20px;">
@@ -20,11 +21,11 @@
     <div class="stats">
       <div class="stat-box">
         <p>Tabs Open</p>
-        <h1>15</h1>
+        <h1 id="tabs-open">15</h1>
       </div>
       <div class="stat-box">
         <p>Tab Points</p>
-        <h1>5</h1>
+        <h1 id="tab-points">5</h1>
       </div>
     </div>
 
@@ -62,7 +63,6 @@
 
     <div class="container">
       <button id="fetch-tabs">Fetch Open Tabs</button>
-      <div id="tabs-display"></div>
     </div>
   </div>
 </div>
