--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
         </a>
     </div>
   </div>
-  <div id="content" style="opacity: 0;">
+  <div id="content" style="opacity: 0; background-color: #F3D9C3;">
     <div class="stats">
       <div class="stat-box">
         <p>Tabs Open</p>
@@ -44,6 +44,10 @@
     </div>
 
     <div class="container">
+      <button id="group-tabs"><img src="images/gemini.png" alt="Group Icon" style="width: 20px; height: 20px; margin-right: 5px;"> Group Tabs</button>
+    </div>
+
+    <div class="container">
       <h2>Daily Challenges</h2>
       <div class="checkbox-list">
         <div class="checkbox-item">
@@ -60,11 +64,8 @@
         </div>
       </div>
     </div>
-
-    <div class="container">
-      <button id="fetch-tabs">Fetch Open Tabs</button>
-    </div>
   </div>
+  <img src="images/wave.gif" alt="An animated GIF" style="position: absolute; bottom: 25%; left: 25%; width: 50%; height: 50%; z-index: -1;">
 </div>
 <script src="./popup.js" type="module"></script>
 </body>
